--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/nahb
+MONGO_URI=mongodb://localhost:27019/nahb
 MYSQL_HOST=localhost
+MYSQL_PORT=3308
 MYSQL_USER=root
 MYSQL_PASSWORD=rootpassword
 MYSQL_DB=nahb
