--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
         "dev": "nodemon --exec ts-node src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
+        "test": "jest --coverage",
+        "test:watch": "jest --watch",
         "seed:story": "ts-node src/scripts/seedMainStory.ts"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.13.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
@@ -30,6 +33,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/http-errors": "^2.0.5",
+        "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/mime": "^3.0.4",
         "@types/morgan": "^1.9.9",
@@ -39,8 +43,13 @@
         "@types/range-parser": "^1.2.7",
         "@types/send": "^1.2.1",
         "@types/serve-static": "^2.2.0",
+        "@types/supertest": "^6.0.2",
         "@types/webidl-conversions": "^7.0.3",
+        "jest": "^29.7.0",
+        "mongodb-memory-server": "^9.1.6",
         "nodemon": "^3.1.11",
+        "supertest": "^6.3.4",
+        "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.2"
     }
