--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.2.0",
         "morgan": "^1.10.0",
+        "multer": "^2.0.2",
         "mysql2": "^3.9.1",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -38,12 +40,14 @@
         "@types/mime": "^3.0.4",
         "@types/morgan": "^1.9.9",
         "@types/ms": "^2.1.0",
+        "@types/multer": "^2.0.0",
         "@types/node": "^20.12.7",
         "@types/qs": "^6.14.0",
         "@types/range-parser": "^1.2.7",
         "@types/send": "^1.2.1",
         "@types/serve-static": "^2.2.0",
         "@types/supertest": "^6.0.2",
+        "@types/uuid": "^10.0.0",
         "@types/webidl-conversions": "^7.0.3",
         "jest": "^29.7.0",
         "mongodb-memory-server": "^9.1.6",
