--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ JWT_SECRET=supersecretkey
 NODE_ENV=development
 
 # Ollama AI Configuration
-OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_BASE_URL=http://host.docker.internal:11434
 OLLAMA_MODEL=llama3.2:3b
