--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - MYSQL_USER=root
       - MYSQL_PASSWORD=rootpassword
       - MYSQL_DB=nahb
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+      - OLLAMA_MODEL=llama3.2:3b
     depends_on:
       - mongo
       - mysql
