--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "adm-zip": "^0.5.16",
+        "archiver": "^7.0.1",
         "axios": "^1.13.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
@@ -29,6 +31,8 @@
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "@types/adm-zip": "^0.5.7",
+        "@types/archiver": "^7.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.17",
